creusot/tests/should_fail/impure_functions.stderr
error[creusot]: called impure program function in logical context "std::vec::Vec::<T, A>::len"
 --> impure_functions.rs:6:20
  |
6 |     pearlite! { @v.len() }
  |                    ^^^

error: aborting due to previous error

